# mcp-oracle

./: README.md  pyproject.toml  run.py  test_connection.py  test_oracle.py
pkg/: Oracle11gTools.py  pyproject.toml
pkg/db_oracle_get_mcp/: __init__.py
pkg/db_oracle_get_mcp_sse/: __init__.py
src/mcp_server_jysd_cx_oracle/: __init__.py  oracle_tools.py
src/mcp_server_oracle/: __init__.py  oracle_tools.py
